--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "next telemetry disable"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.7",
