--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=20.9.0"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
