--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
