--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
     "next": "^16.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -73,6 +74,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
